# RobotSCARA

./: .gitignore  404.html  LICENSE  README.html  README.md  SCARA.py  index.html  launcher.bash  launcher.bat  launcher.py  mkdocs.yml  requirements.txt  sitemap.xml
backend/: CMakeLists.txt
backend/include/: Controller.hpp  HardcodedParams.hpp  RobotModel.hpp  SIL.hpp  SocketUtils.hpp  TorqueQP.hpp  Types.hpp
backend/include/nlohmann/: json.hpp
backend/src/: Controller.cpp  HIL.cpp  RobotModel.cpp  SIL.cpp  SocketUtils.cpp  TorqueQP.cpp  main_server.cpp
buffer/: buffer.csv  buffer_hash.txt  buffer_ideal_data.csv  buffer_simulation.csv
configs/: initial.json  temp.json
control/: index.html
data/test/: metadata.json  new_trajectory.csv
data/test2/: metadata.json  new_trajectory.csv  test_x.csv
docs/: control.md  index.md  kindyn.html  kindyn.md
kindyn/: index.html
robot/: __main__.py  analytic.py  controller.py  dynamics.py  gui.py  hil_client.py  kinematics.py  measurement.py  misc.py  scene.py  sil_client.py  sil_process.py
search/: search_index.json
tests/integration/: integration_test.py
tests/performance/: dynamics_perf_test.py  gui_perf_test.py  kinematics_perf_test.py  memory_perf_test.py
tests/unit/: config_test.py  conftest.py  dynamics_test.py  kinematics_test.py  velocity_profile_test.py
utils/: generate_params.py  jacobians.py  jacobians_dot.py  litteral.py
